syntax = "proto3";

package pricecollector;

option go_package ="github.com/awnzl/top_currency_checker/lib/proto/pricecollector";

message PriceRequest {
    repeated string List = 1;
}

message PriceResponse {
    map<string, double> Prices = 1;
}

service PriceService {
    rpc GetPrices(PriceRequest) returns (PriceResponse);
}
